--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,15 +2,16 @@
   "configurations": [
     {
       "type": "java",
-<<<<<<< HEAD
       "name": "CodeLens (Launch) - SPL",
       "request": "launch",
       "mainClass": "app.SPL",
-=======
+      "projectName": "Belajar"
+    },
+    {
+      "type": "java",
       "name": "CodeLens (Launch) - Main",
       "request": "launch",
       "mainClass": "Main",
->>>>>>> 1f415d6ca690e34568d8b9e2d76b9d5605b5c816
       "projectName": "Belajar"
     },
     {
