bikin class StudiKasus, rename file input, kelarin interpolasi

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
   "configurations": [
     {
       "type": "java",
+      "name": "CodeLens (Launch) - StudiKasus",
+      "request": "launch",
+      "mainClass": "app.StudiKasus",
+      "projectName": "Belajar"
+    },
+    {
+      "type": "java",
       "name": "CodeLens (Launch) - Util",
       "request": "launch",
       "mainClass": "app.Util",
